[User Menu] Flipped the profile badge to be on the LHS for RTL layouts

Discussed with bettes@ to decide that the profile badge on RTL layouts
should be on the LHS instead.
Also fixed the position of the circular mask for profile icon on RTL
layouts (see first bug) - the circular mask needs to be bumped to the
right on RTL layouts so that it's right-aligned.

See comparative screenshots:
https://drive.google.com/drive/folders/0B7Fvv7JszRyGN1FKakw4RXE2Vkk?usp=sharing

BUG=640907
BUG=615893

Review-Url: https://codereview.chromium.org/2285413002
Cr-Commit-Position: refs/heads/master@{#415338}

Former-commit-id: bc337a09e7187b86f0fae15e2ff6f66e28246be8